--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
+
 .App {
   text-align: center;
+  height: 100vh;
 }
 
 .App-logo {
