--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   height: 100vh;
 }
 
+.notFound{
+  height: 400px;
+  margin: 100px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -16,20 +21,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
